# kobidh

./: LICENSE  Makefile  README.md  README_ENHANCED.md  pyproject.toml  setup.py
_requirements/: dev.txt  main.txt
docs/: SCRIPTS.md
kobidh/: cli.py  constants.py  core.py  exceptions.py
kobidh/infrastructure/: cloudformation.py  ecr.py  ecs.py  vpc.py
kobidh/meta/: __init__.py
kobidh/resource/: autoscaling_config.py  config.py  ecr_config.py  ecs_config.py  iam_config.py  vpc_config.py
kobidh/resource/infra/: __init__.py  attrs.py  ecr_config.py  ecs_config.py  iam_config.py  vpc_config.py
kobidh/resource/provision/: __init__.py  autoscaling_config.py  service_config.py
kobidh/service/: configuration.py  infra.py  provision.py
kobidh/services/: scaling.py
kobidh/utils/: decorators.py  enhanced_logging.py  formatting.py  logging.py
requirements/: base.txt  development.txt  testing.txt
scripts/: immediate_improvements.py  quick_setup.sh  reorganize_project.py
test/: all.py
tests/: conftest.py  test_core.py
tests/integration/: test_apps.py
